<resources>
    <string name="app_name">FocusLock</string>
    <string name="schedule">Schedule</string>
    <string name="sleep_time">Sleep Time</string>
    <string name="awake_time">Awake Time</string>
    <string name="blocked_apps">Blocked apps (%d)</string>
    <string name="more_button_content_description">More options button for current schedule</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="set_your_sleep_time">Set your Sleep time</string>
    <string name="set_your_wake_up_time">Set your Wakeup time</string>
    <string name="instant_lock">Instant Lock</string>
    <string name="instant_lock_title">Block app till next</string>
    <string name="instant_lock_message">You can instantly block your apps</string>
    <string name="search">Search</string>
    <string name="video">Video</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="level_title">Select your level</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_n">Level %d</string>
    <string name="icon_content_description">Application Icon</string>
    <string name="level_message">App will be block\n%s to %s</string>
    <string name="on_boarding_level_message">Apps will be blocked between %s to %s</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="display_time">%02d:%02d hr</string>
    <string name="quick_lock_activated_message">Apps Blocked till next</string>
    <string name="unblock_apps_message">Are you really want to unblock the apps.</string>
    <string name="dialog_yes_button">YES</string>
    <string name="dialog_no_button">NO</string>
    <string name="app_blocked_message">This app is currently blocked.</string>
    <string name="close">Close</string>

    <string name="setting_bottom_message_1">Invite your friends</string>
    <string name="setting_bottom_message_2">&amp; make their life more productive</string>
    <string name="setting_title_emergency">Emergency</string>
    <string name="setting_title_feedback">Feedback</string>
    <string name="setting_title_about">About Us</string>
    <string name="emergency_toast">Use it only in Emergency case for disabling all the schedules.</string>
    <string name="feedback_dialog_message">Your words are valuable for us</string>
    <string name="name_hint_text">Name</string>
    <string name="title_hint_text">Title</string>
    <string name="description_hint_text">Description</string>
    <string name="submit_text">Submit</string>
    <string name="cancel_text">Cancel</string>
    <string name="app_link">empty</string>
    <string name="about_text">About FocusLock</string>
    <string name="about_dialog_message_1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry"'"s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="about_dialog_message_2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="emergency_dialog_text_1">Emergency mode is a mode where all the schedules will be disabled in case of a emergency. Please use this mode in emergency cases only.</string>
    <string name="emergency_dialog_text_2">Are you sure about disabling all the schedules?</string>
    <string name="app_current_Period">2018"-"2019 FocusLock.Inc</string>
    <string name="app_version">Version %s</string>
    <string name="usage_permission_request_message">App needs usage stats permission to function.</string>
    <string name="grant">Grant Permission</string>
    <string name="deny">Deny</string>

    <string name="setting_invite_text_1">Invite your friends</string>
    <string name="setting_invite_text_2">&amp; make their life more productive</string>
    <string name="share_message">Share with friends</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="Sunday_checkbox_text">S</string>
    <string name="Monday_checkbox_text">M</string>
    <string name="Tuesday_checkbox_text">T</string>
    <string name="Wednesday_checkbox_text">W</string>
    <string name="Thursday_checkbox_text">T</string>
    <string name="Friday_checkbox_text">F</string>
    <string name="Saturday_checkbox_text">S</string>
    <string name="Repeat_text">Repeat</string>
    <string name="sunday_checkbox_text">S</string>
    <string name="monday_checkbox_text">M</string>
    <string name="tuesday_checkbox_text">T</string>
    <string name="wednesday_checkbox_text">W</string>
    <string name="thursday_checkbox_text">T</string>
    <string name="friday_checkbox_text">F</string>
    <string name="saturday_checkbox_text">S</string>
    <string name="repeat_text">Repeat</string>
    <string name="minimum_weekday_msg">You have to select one weekday to repeat</string>
    <string name="minimum_time_msg">You have to set the block time to at least 10 mins</string>
    <string name="minimum_blocked_apps_msg">You have to select at least one app to block</string>
    <string name="minimum_sleep_time_msg">You have to set sleep hours</string>
    <string name="ok_text">OK</string>
    <string name="empty_string"></string>
    <string name="remove_schedule">Are you sure you want to delete the schedule?</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="delete_text">Delete</string>
    <string name="selected_sleep_time">You selected your sleep time <b>%d hours %d minutes </b>  </string>
    <string name="on_boarding_time_picker_title">What time would like to sleep</string>
    <string name="on_boarding_seek_bar_title">How many hours would you like to sleep?</string>
    <string name="step_1">Step 1 of 2</string>
    <string name="step_2">Step 2 of 2</string>
    <string name="on_boarding_app_block_title">Which app would you like to block?</string>
    <string name="on_boarding_level_title">From which level you like to start?</string>
    <string name="on_boarding_block_btn_text">Block your apps</string>
    <string name="edit">Edit</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="delete">Delete</string>


</resources>
