<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/enable"
        android:title="@string/enable"
        android:icon="@drawable/ic_enable"
        app:showAsAction="never"/>
    <item
        android:id="@+id/disable"
        android:title="@string/disable"
        android:icon="@drawable/ic_disable"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never"/>

</menu>