<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/titleBarTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/emergency_round"
        android:drawablePadding="14dp"
        android:fontFamily="@font/muli_bold"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/setting_title_emergency"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/muli_regular"
        android:textSize="14sp"
        android:id="@+id/textTV1"
        android:text="@string/emergency_dialog_text_1"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintTop_toBottomOf="@id/titleBarTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="14sp"
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/muli_regular"
        android:text="@string/emergency_dialog_text_2"
        android:textColor="@color/colorDisabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTV1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noBtn"
        android:textSize="12sp"
        android:fontFamily="@font/muli_bold"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_no_button"
        app:layout_constraintBottom_toBottomOf="@+id/yesBtn"
        app:layout_constraintEnd_toStartOf="@+id/yesBtn"
        app:layout_constraintTop_toTopOf="@+id/yesBtn" />

    <com.google.android.material.button.MaterialButton
        android:textSize="12sp"
        android:id="@+id/yesBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/dialog_yes_button"
        android:textColor="@color/colorPink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

</androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>