<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:fontFamily="@font/muli_bold"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/appIconIv"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="26dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/appNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/muli_semibold"
                app:layout_constraintStart_toEndOf="@id/appIconIv"
                app:layout_constraintTop_toTopOf="@id/appIconIv"
                tools:text="Snapchat" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_light"
                android:text="@string/app_blocked_message"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/appNameTv"
                app:layout_constraintTop_toBottomOf="@id/appNameTv" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@color/backgroundColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appIconIv">

                <TextView
                    android:id="@+id/motivationMessageTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/motivationAuthorTv"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="“It takes discipline not to let social media steal your time.”" />

                <TextView
                    android:id="@+id/motivationAuthorTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/muli_bold"
                    android:textColor="@color/colorDisabled"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/motivationMessageTv"
                    tools:text="Alexis Ohanian" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_bold"
                android:text="@string/close"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>